--- a/style.scss
+++ b/style.scss
@@ -22,6 +22,7 @@ html,body{
         width: 50%;
         height: calc(100% + 50px);
         background-color: #19191910;
+        overflow-y: scroll;
         span.title{
             font-size: 12px;
             font-weight: bold;
@@ -29,6 +30,7 @@ html,body{
             background: #191919;
             padding: 3px 5px;
             color: #f2f2f2;
+            z-index: 1;
         }
         span#log{
             margin-top: 50px;
@@ -36,6 +38,7 @@ html,body{
             position: relative;
             font-size: 10px;
             left: 5px;
+            z-index: 0;
         }
     }
     .inputs{
