--- a/style.scss
+++ b/style.scss
@@ -20,7 +20,7 @@ html,body{
     }
     .log{
         width: 50%;
-        height: calc(100% + 50px);
+        height: 300px;
         background-color: #19191910;
         overflow-y: scroll;
         span.title{
