--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ html, body {
 
 .container .log {
   width: 50%;
-  height: calc(100% + 50px);
+  height: 300px;
   background-color: #19191910;
   overflow-y: scroll;
 }
