--- a/style.scss
+++ b/style.scss
@@ -8,6 +8,9 @@ html,body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    .svg{
+        max-width:80vw;
+    }
     .estimate{
         width: 40%;
         height: 70px;
